--- a/sites/all/themes/pul_versailles/sass/base/_typography.scss
+++ b/sites/all/themes/pul_versailles/sass/base/_typography.scss
@@ -16,6 +16,6 @@ h1.splash-title {
 	font-family: $font-script;
 	color: $versailles-red;
 	font-variant: normal;
-	font-size: 60px;
+	font-size: 75px;
 	letter-spacing: 0px;
 } 
