--- a/sites/all/themes/pul_versailles/sass/pul-versailles.styles.scss
+++ b/sites/all/themes/pul_versailles/sass/pul-versailles.styles.scss
@@ -73,3 +73,9 @@ body {
 	font-size:1.3em;
 	line-spacing:1.5em;
 }
+
+.node--exhibit-rbsc-item--full .field__items {
+	vertical-align: top;
+	display: inline-block;
+	width: 600px;
+}
